Aangepaste structuur html + CSS achtergrondkleuren toegepast

--- a/lab 2/The future/Index.html
+++ b/lab 2/The future/Index.html
@@ -10,21 +10,29 @@
     <div class="grid">
         <div class="redBox">
             <div>The future feels like homework</div>
+        </div>
+        <div class="redBox">
             <div>The future feels like homework</div>
         </div>
         <div class="blueBox">
             <div>The futre is broken</div>
         </div>
         <div class="redBox">
-            <div>The futre is broken</div>
+            <div>The futre feels like homework</div>
         </div>
         <div class="yellowBox">
             <div>The cloud is the new infinity</div>
         </div>
         <div class="redBox">
             <div>The future feels like homework</div>
+        </div>
+        <div class="redBox">
             <div>The future feels like homework</div>
+        </div>
+        <div class="redBox">
             <div>The future feels like homework</div>
+        </div>
+        <div class="redBox">
             <div>The future feels like homework</div>
         </div>
 
